Guards SVG code in V8 bindings with ENABLE(SVG) https://bugs.webkit.org/show_bug.cgi?id=34812

Also updates Android V8 Makefile to generate required SVG headers.

No new tests, build fix only.


Canonical link: https://commits.webkit.org/45960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54650 268f45cc-cd09-0410-ab3c-d52691b4dbfc